# Prodocu

./: Cargo.toml  README.md  api.js  api.ts  app.js  backup.py  beest-simulator.js  config.html  config.py  dashboard.css  dashboard.html  database.rs  database.sql  debug.js  demo.html  deploy.js  dev-config.json  dev-server.js  hackathon-main.py  index.html  main.py  mechanics.py  migrate.rs  optimize.ts  produco.cpp  produco.js  produco.rs  produco.ts  prototype.js  server.js  stats.cpp  stats.html  stats.js  stats.py  storage.js  storage.py  styles.css  task.cpp  task.js  task.rs  (+12 more)
