[package]
name = "produco"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[lib]
name = "produco"
path = "produco.rs"

[[bin]]
name = "produco"
path = "produco.rs"

[[bin]]
name = "migrate"
path = "migrate.rs"

[[bin]]
name = "timer"
path = "timer.rs"
